--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bsky-mcp-server",
   "version": "1.0.0",
-  "description": "MCP server for Bluesky integration",
+  "description": "MCP server for Bluesky",
   "main": "build/src/index.js",
   "type": "module",
   "scripts": {
