--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gthumb/bsky-mcp-server",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "MCP server for Bluesky",
   "main": "build/src/index.js",
   "type": "module",
@@ -8,7 +8,7 @@
     "bsky-server": "./build/src/index.js"
   },
   "scripts": {
-    "build": "tsc && chmod 755 build/src/index.js && mkdir -p build/test && cp test/feed_example.json build/test/",
+    "build": "tsc && chmod 755 build/src/index.js && cp garden.jpg build/src/ && mkdir -p build/test && cp test/feed_example.json build/test/",
     "start": "node build/src/index.js",
     "dev": "tsc && node build/src/index.js",
     "test": "pnpm run build && node build/test/final-test.js",
