--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@atproto/api": "^0.14.9",
     "@modelcontextprotocol/sdk": "^1.7.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "zod": "^3.24.2"
   },
