Added initial get-post-thread tool implementation

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node build/src/index.js",
     "dev": "tsc && node build/src/index.js",
     "test": "pnpm run build && node build/test/final-test.js",
+    "test:get-thread": "pnpm run build && node build/test/tools/test-get-post-thread.js",
     "process-posts": "pnpm run build && node build/src/scripts/process-post-examples.js"
   },
   "keywords": [
